--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -84,7 +84,7 @@
     filter:contrast(0.6);
     opacity: 0.6;
 }
-button {
+.profileContainer button {
     border: none;
     border-radius: 8px;
     padding: 8px;
@@ -93,7 +93,7 @@ button {
     height: 30px;
 }
 
-button:disabled {
+.profileContainer button:disabled {
     box-shadow: none;
 }
 
