--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -1,11 +1,11 @@
 .component {
-  width: 44%;
-  margin-top: 12%;
+  width: 100%;
+  margin-top: var(--navBarHeight);
   display: flex;
   flex-direction: row;}
 
 .message{
-  position: fixed;
+  position: absolute;
   top:10%;
   width:100%;
   height: 4%;
@@ -15,5 +15,20 @@
 }
 
 .h1{
-  font-size: 15px;
+  margin: 12%;
+  color: white;
+  height: 20px;
+  font-size: 10px;
+
 }
+
+
+
+.buton{
+  width: 250px;
+  transition: all 0.5s;
+
+}
+.buton:hover{
+  width: 400px;
+  }
