--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -17,17 +17,52 @@
     background-color: #010003;
   }
 
+  .sectionBanner {
+    display: flex;
+    position: absolute;
+    top:0;
+    left: 0;
+    flex-direction: row;
+    align-items: center;
+    scale: 0.5;
+    transition: transform 0.3s, filter 0.3s;
+    }
+    .mainLogo {
+        margin: 0 2px;
+        font-size: 1.1rem;
+        cursor: default;
+      }
+      .mainLogoGuru {
+        margin: 0;
+        font-size: 1.1rem;
+        cursor: default;
+        position: absolute;
+        transform: translateX(100%);
+      }
+      .mainLogo-light {
+        text-shadow: 2px 3.5px 2px rgba(6, 103, 116, 0.774);
+      }
+      .mainLogo-dark {
+        text-shadow: 2px 3.5px 2px rgb(39, 126, 197);
+      }
+    .bannerImg {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+    }
+
   .button {
     background-color: transparent;
     border: none;
     transition: transform 0.3s ;
+    padding: 0;
     }
     .button:hover{
       transform: scale(1.04);
     }
 
     .link {
-      font-size: 100%;
+      /* font-size: 100%; */
       text-transform: uppercase;
       text-decoration: none;
       letter-spacing: 0.2em;
@@ -45,12 +80,27 @@
     }
 
 .bolsita{
-  transition: transform 0.5s;
-    /*  */
-  z-index: 9998;
-    /*  */
+    height: 25%;
+    transition: transform 0.5s;
+    z-index: 9998;
 }
 .bolsita:hover{
-  transform:scale(2);
+  transform:scale(1.7);
   cursor: pointer;
+}
+
+.mainMenu {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .mainMenu {
+        display: block;
+    }
+    .inicio {
+        display: none;
+    }
+    .component {
+        background-color: bla;
+    }
 }
