--- a/client/src/components/datos/Subscripciones/SubscripcionesButton.module.css
+++ b/client/src/components/datos/Subscripciones/SubscripcionesButton.module.css
@@ -2,7 +2,7 @@
 
 .container{
     width: 130px;
-    margin-left:-3%;
+    /* margin-left:-3%; */
     transition: transform 0.5s;
 }
 
@@ -13,8 +13,8 @@
 
 .botón {
     display: flex;
-    padding-left: 1%;
-    padding: 1%;
+    /* padding-left: 1%; */
+    /* padding: 1%; */
     letter-spacing: 2px;
     text-align: center;
     align-items: center;
