--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -98,7 +98,7 @@
 }
 
 .save {
-    background-color: rgb(0,140, 158);
+    background-color: #008c9e;
 }
 .save:hover:enabled {
     box-shadow: 2px 2px 5px rgba(6, 103, 116, 0.774);
