--- a/client/src/components/bars/searchBar/searchBar.module.css
+++ b/client/src/components/bars/searchBar/searchBar.module.css
@@ -97,3 +97,9 @@
         transform: translate(-1000);
       }
     }
+
+    /* @media screen and (max-width: 700px) {
+        .component {
+            display: none;
+        }
+    } */
