--- a/client/src/components/datos/Subscripciones/SubscripcionesButton.module.css
+++ b/client/src/components/datos/Subscripciones/SubscripcionesButton.module.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     animation: scale-up-center 4.4s infinite; 
+    margin: 0;
   }
   
   @keyframes scale-up-center {
