--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -19,13 +19,8 @@
 
   .sectionBanner {
     display: flex;
-    position: absolute;
-    top:0;
-    left: 0;
-    flex-direction: row;
     align-items: center;
-    scale: 0.5;
-    transition: transform 0.3s, filter 0.3s;
+    float: left;
     }
     .mainLogo {
         margin: 0 2px;
@@ -37,7 +32,7 @@
         font-size: 1.1rem;
         cursor: default;
         position: absolute;
-        transform: translateX(100%);
+        transform: translateX(10%);
       }
       .mainLogo-light {
         text-shadow: 2px 3.5px 2px rgba(6, 103, 116, 0.774);
@@ -50,6 +45,7 @@
       height: 25px;
       border-radius: 50%;
     }
+
 
   .button {
     background-color: transparent;
@@ -89,18 +85,77 @@
   cursor: pointer;
 }
 
-.mainMenu {
+.barsButton {
     display: none;
+    height: 25%;
 }
 
+.barsMenu {
+    position: absolute;
+    top: var(--navBarHeight);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.barsMenu-light {
+    background-color: rgba(251, 251, 252, 0.623);
+}
+
+
+/* ------------ RESPONSIVE PROPERTIES -------------*/
+
+
 @media screen and (max-width: 1000px) {
-    .mainMenu {
+    .barsButton {
         display: block;
     }
     .inicio {
         display: none;
     }
-    .component {
-        background-color: bla;
+    .button {
+        
+    }
+    .searchBar-responsive {
+        display: none;
+    }
+    .subscription-responsive {
+        display: none;
+    }
+}
+
+@media screen and (width > 1000px) {
+    .barsMenu {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .searchBar {
+        display: none;
+    }
+    .searchBar-responsive {
+        display: block;
+    }
+    .subscription {
+        display: none;
+    }
+    .subscription-responsive {
+        display: block;
+    }
+    .bolsita {
+        order: 1;
+    }
+    .metamask {
+        order: 2;
+    }
+    .sectionBanner {
+        order: 3;
+    }
+    .menu {
+        order: 4;
+    }
+    .barsButton {
+        order: 5;
     }
 }
