--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: absolute;
   animation:blur-in 0.4s linear both
   }
   @keyframes blur-in {
@@ -144,4 +145,10 @@ animation:bounce-top 2s linear both infinite} @keyframes bounce-top{0%{transform
 .newsTitle-dark {
   color:  rgba(0, 221, 250, 0.672);
   text-shadow: 2px 3.5px 2px  rgb(36, 3, 73);
+}
+
+@media screen and (max-width: 1000px) {
+    .coursesPreviewContainer {
+        width:min-content;
+    }
 }
