--- a/client/src/components/datos/CoursesDetails/DetalleCurso.module.css
+++ b/client/src/components/datos/CoursesDetails/DetalleCurso.module.css
@@ -10,6 +10,9 @@
     background: linear-gradient(93deg, rgba(0,89,101,1) 17%, rgba(0,140,158,1) 58%, rgba(255,255,255,1) 100%);
     margin-top: 7%;
     color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     animation: slide-in-right 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
@@ -22,6 +25,9 @@ h3 {
     margin: 2% 0 2% 0;
     background-color: rgb(0, 140, 158, 0.85);
     color: whitesmoke;
+}
+h4 {
+  margin: 5px;
 }
 
   @keyframes slide-in-right {
@@ -51,8 +57,21 @@ h3 {
     justify-content: flex-start;
     gap: 10px;
     width: 300px;
-    position: relative;
-    animation: blur-in-expand 0.9s linear both;
+    animation: blur-in-expand 1.2s linear both;
+} 
+
+.data span {
+  display: flex;
+  background-color: rgb(0, 140, 158, 0.85);
+}
+.favorite {
+  width: 25px;
+  height: 25px;
+  margin: 3px;
+  cursor: pointer;
+  border-radius: 15px;
+  margin-top: 10px;
+  filter: invert();
 }
 @keyframes blur-in-expand {
     0% {
@@ -67,7 +86,7 @@ h3 {
     }
   }
 
-.containerImage img {
+.imageURL {
     height: 300px;
     border-radius: 5%;
     object-fit: cover;
@@ -84,6 +103,7 @@ h3 {
   }
 
 .data {
+    display: flex;
     text-align: left;
     background-color: whitesmoke;
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
@@ -99,7 +119,6 @@ h3 {
     width: 65%;
     min-width: 300px;
     max-width: 1000px;
-    /* border: 2px solid rgb(0, 26, 255); */
 }
 
 .containerDescription h4 {
@@ -111,6 +130,17 @@ h3 {
     margin: 2%;
     margin-top: 0;
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
+    animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@keyframes slide-in-left {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .scroll {
@@ -139,11 +169,3 @@ h3 {
     height: 300px;
 }
 
-.favorite {
-    position: absolute;
-    scale: 0.12;
-    top: -120px;
-    right: -120px;
-    z-index: 10;
-    cursor: pointer
-}
