--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -137,9 +137,10 @@ h4 {
 
 .description {
     background-color: whitesmoke;
-    margin: 2%;
+    margin-bottom: 2%;
     margin-top: 0;
     border-radius: 10px;
+    min-width: 300px;
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
     animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
