--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -78,6 +78,7 @@ h4 {
     border-radius: 5%;
     object-fit: cover;
     animation: rotate-vertical-center 2s;
+    box-shadow: 0px 0px 10px #ffffff;
 }
 
 @keyframes rotate-vertical-center {
