--- a/client/src/components/views/CoursePage/CoursePage.module.css
+++ b/client/src/components/views/CoursePage/CoursePage.module.css
@@ -4,20 +4,25 @@
   position: absolute;
   display: flex;
   flex-direction: column; 
+  align-items: center;
   padding-bottom: 20%;
-  animation:blur-in 0.4s linear both
+  width: 100%;
+  animation:blur-in 0.4s linear both;
   } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}} 
 
 .mainBanner {
     background-image: linear-gradient(to right,  #000000, #434343);
     height: 26%;
+    width: 100%;
     /* padding: 2%; */
   }
   .mainBanner h1 {
+    font-size: 10%;
     color: white;
   }
 
 .filterOrder {
+    width: 100%;
   display: flex;
   justify-content: space-evenly;
 }
