--- a/client/src/components/bars/Menu/Menu.module.css
+++ b/client/src/components/bars/Menu/Menu.module.css
@@ -18,6 +18,7 @@
     width: 50px;
     height: 50px;
     object-fit: cover;
+    transition: ease;
   }
   .image:hover{
     border: 2px solid rgb(253, 255, 116);
@@ -62,4 +63,11 @@
 
 .component:hover .options {
   display: block;
+}
+
+@media screen and (max-width: 700px) {
+    .image {
+        width: 35px;
+        height: 35px;
+    }    
 }
