--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -1,12 +1,14 @@
 .component {
-  width: 44%;
-  margin-top: 12%;
+  /* width: 44%; */
+  margin-top: var(--navBarHeight);
   display: flex;
-  flex-direction: row;}
+  flex-direction: row;
+  padding: 4% 0;
+}
 
 .message{
   position: fixed;
-  top:10%;
+  top:var(--navBarHeight);
   width:100%;
   height: 4%;
   z-index: 999999;
