--- a/client/src/components/views/Cart/Cart.module.css
+++ b/client/src/components/views/Cart/Cart.module.css
@@ -1,15 +1,20 @@
 .container{
   margin-top: var(--navBarHeight);
-  padding-top: 4%;
-  padding-bottom: 15%;
-  min-height: 90vh;
+  /* padding-top: 4%; */
+  /* padding-bottom: 15%; */
+  min-height: calc(100vh - var(--navBarHeight));
   background-color: rgb(94, 121, 148);
   color: aliceblue;
-  animation:blur-in 1s linear both}
-    @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+  animation:blur-in 1s linear both;
+  position: absolute;
+  display: flex;
+flex-direction: column;
+  /* width: 100vw; */
+  /* box-sizing: border-box; */
+}
+@keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
  
 .img{
-    
     width:80px;
     height: 80px;
     margin-left: 5%;
@@ -17,11 +22,10 @@
     border-radius: 100%;
     border: solid 2px;
     border-color: rgba(248, 248, 248, 0.658);
-    
 }
 .price{
-font-size: 14px;
-color: rgb(0, 0, 0);    
+    font-size: 14px;
+    color: rgb(0, 0, 0);    
 }
 
 .product {
@@ -31,7 +35,7 @@ color: rgb(0, 0, 0);
     height:100px;
 
     border-radius: 5px;
-    padding: 10px;
+    /* padding: 10px; */
     margin: 10px;
     background-color: rgba(240, 248, 255, 0.26);
   }
@@ -39,24 +43,25 @@ color: rgb(0, 0, 0);
 
 
 .productscontainer{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-around;
+    /* display: grid; */
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* justify-content: space-around; */
     display: flex;
-    
     flex-direction: column;
+    /* padding: 0; */
+    /* flex-direction: column; */
 }
-.flex{
-    margin-left: 1%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-around;
-    
+.flex {
+    display: flex;
+    /* margin-left: 1%; */
+    /* display: grid; */
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* justify-content: space-around;    */
 }
 
 
-.total{
-    padding-left: 20%;
+.total {
+    /* padding-left: 20%; */
     /* width: 65%; */
     text-align: center;
 
@@ -72,8 +77,8 @@ width: 300px;
 }
 
 .title{
-    padding: 1%;
-    padding-left: 2%;
+    /* padding: 1%; */
+    /* padding-left: 2%; */
     animation:scale-up-horizontal-left 0.4s }
      @keyframes scale-up-horizontal-left{0%{transform:scaleX(.4);transform-origin:left center}100%{transform:scaleX(1);transform-origin:left center}}
 
@@ -88,7 +93,6 @@ width: 300px;
     border-radius: 5px;
     background-color:black;
     color: white;
-  
 }
 
 .cantidad_button{
@@ -116,8 +120,8 @@ width: 300px;
 
 .items{
     font-size: 14px;
-    padding: 2%;
+    /* padding: 2%; */
     height: 25px;
-    width: max-content;
-    margin-bottom: 4%;
+    /* width: max-content; */
+    /* margin-bottom: 4%;    */
 }
