--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,11 @@
     --navBarHeight: 12vh;
     --footerHeight: 10vh;
 }
+
+html {
+    box-sizing: border-box;
+  }
+  *, *::before, *::after {
+    box-sizing: inherit;
+  }
+  
