Co-authored-by: Sebastian Menacho <sebastianmenacho.martel@gmail.com> Co-authored-by: crespogianina <crespogianina@users.noreply.github.com> Co-authored-by: santiago calderon sechotborgh <SantiagoCalderonS@users.noreply.github.com> Co-authored-by: Solbenevent <Solbenevent@users.noreply.github.com> Co-authored-by: Micaela Britez <MBritez07@users.noreply.github.com> Co-authored-by: Francisco Passetti <FranPass@users.noreply.github.com>

--- a/client/src/components/views/ventanaemergente/ventana.module.css
+++ b/client/src/components/views/ventanaemergente/ventana.module.css
@@ -38,3 +38,12 @@
   margin: 2%;
 
 }
+.boton{
+  background-color: black;
+  color:white;
+  border:2px solid rgb(241, 241, 241)
+}
+.boton:hover{
+  background-color: aliceblue;
+  color:black;
+}
