--- a/client/src/components/views/LandingPage/LandingPage2.module.css
+++ b/client/src/components/views/LandingPage/LandingPage2.module.css
@@ -66,7 +66,7 @@
     color: #ffffff;
     font-size: 28px;
     padding: 20px;
-    width: 280px;
+    width: 310px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -80,8 +80,8 @@
     color: #ffffff;
     font-size: 28px;
     padding: 20px;
-    width: 280px;
-    height: 80px;
+    width: 320px;
+    height: 75px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -115,6 +115,12 @@
     color:#1a936f;
     width: 100%;
     height:80%;
+  
+   }
+
+   .name{
+    margin-top: 0%;
+    width: 400px;
    }
   
     .bannerImg {
