--- a/client/src/components/datos/CourseCard/CourseCard.module.css
+++ b/client/src/components/datos/CourseCard/CourseCard.module.css
@@ -1,10 +1,10 @@
-.cardContainer {
+.component {
   display: inline-block;
   margin: 10px;
   padding: 4%;
   padding-bottom: 10%;
-  animation:scale-up-horizontal-center 0.6s}
-   @keyframes scale-up-horizontal-center{0%{transform:scaleX(.2)}100%{transform:scaleX(1)}}
+  animation:scale-up-horizontal-center 0.6s
+} @keyframes scale-up-horizontal-center{0%{transform:scaleX(.2)}100%{transform:scaleX(1)}}
 
 .card {
   
