--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -23,7 +23,8 @@
    }
 
    .sectionCourses {
-      margin-top: 4%;
+      max-width: 100vw;
+      /* margin-top: 4%; */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -31,7 +32,13 @@
    }
    .sectionCourses:hover {
       transform: scale(1.025);
-   }
+      }
+      .coursesPreviewContainer {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         width: 100%;
+      }
 
    .sectionNews {
       display: flex;
