--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -7,6 +7,8 @@
   z-index: 9998;
   top: 0;
   width: 100%;
+  box-sizing: border-box;
+  padding: 2% 0 0;
   animation:blur-in 0.4s linear both
   } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
