--- a/client/src/components/datos/CoursesPreview/CoursesPreview.css
+++ b/client/src/components/datos/CoursesPreview/CoursesPreview.css
@@ -1,24 +1,27 @@
 .coursesPreviewContainer {
    display: flex;
    justify-content: center;
-   transform: scale(0.8);
+   /* transform: scale(0.8); */
    margin: 0;
+   position: relative;
 }
 
 .courseCardContainer {
    display: flex;
    justify-content: center; /* Add this to center the content horizontally within each slide */
-
 }
 
 .courses-container {
-   display: flex;
-   align-items: center;
-   justify-items: center;
    width: 80%;
    transition: ease 2s;
    /* margin: 0 4rem; */
-   /* position:absolute; */
+   /* bullets: */
+   /* position: relative; */
+}
+.swiper-container {
+    position: relative; /* Add relative positioning to create a stacking context */
+    width: 80%;
+    transition: ease 2s;
 }
 
 .navigation-container {
@@ -44,19 +47,25 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      opacity: 0.7;
-      padding-bottom: 13%;
-
-      transition: opacity ease 250ms;
+      gap: 2%;
+      margin-top: 1rem;
+      position:static !important;
+      /* opacity: 0.7; */
+      /* padding-bottom: 13%; */
+        /* padding-bottom: -5rem; */
+      /* transition: opacity ease 250ms; */
+      /* position: relative; */
+      /* top: 1rem; */
+      bottom: 10px !important;
    }
       .swiper-pagination:hover {
-         opacity: 1;
+         /* opacity: 1; */
          cursor: pointer;
-
    }
 
 .swiper-pagination-bullet{
    scale: 1.8;
+   margin: 0.4%;
    border: 1px solid  rgb(255, 255, 255);
 }
     
